@@ -28,22 +28,22 @@ class TestSym(BaseTest):
 
     def testSMItoInChI(self):
         """Verify that all molecules give the same InChI"""
-        for smi in self.smiles:
-            output, error = run_exec(smi, "babel -ismi -oinchi")
-            self.assertEqual(output.rstrip(), self.inchi)
+        output, error = run_exec("\n".join(self.smiles), "babel -ismi -oinchi")
+        output = "\n".join([x.rstrip() for x in output.split("\n")])
+        self.assertEqual(output.rstrip(), "\n".join([self.inchi] * len(self.smiles)))
 
     def testSMItoCAN(self):
         """Verify that all molecules give the same cansmi"""
-        for smi in self.smiles:
-            output, error = run_exec(smi, "babel -ismi -ocan")
-            self.assertEqual(output.rstrip(), self.cansmi)            
+        output, error = run_exec("\n".join(self.smiles), "babel -ismi -ocan")
+        output = "\n".join([x.rstrip() for x in output.split("\n")])
+        self.assertEqual(output.rstrip(), "\n".join([self.cansmi] * len(self.smiles)))
 
     def testSMIthruXML(self):
         """Verify that roundtripping through CML preserves stereo"""
-        for smi in self.smiles:
-            output, error = run_exec(smi, "babel -ismi -ocml")
-            output, error = run_exec(output.rstrip(), "babel -icml -ocan")
-            self.assertEqual(output.rstrip(), self.cansmi)
+        output, error = run_exec("\n".join(self.smiles), "babel -ismi -ocml")
+        output, error = run_exec(output.rstrip(), "babel -icml -ocan")
+        output = "\n".join([x.rstrip() for x in output.split("\n")])
+        self.assertEqual(output.rstrip(), "\n".join([self.cansmi] * len(self.smiles)))
 
 class TestTetSym(TestSym):
     """A series of tests relating to tetrahedral symmetry"""
@@ -100,6 +100,87 @@ class TestCisTransSym(TestSym):
                 "C(=C\Br)\C=C\Cl"
                 ]
 
+class TestConversions(BaseTest):
+    """A series of tests relating to file format conversions and symmetry"""
+    
+    def setUp(self):
+        self.canFindExecutable("babel")
+        
+    def notestSMILEStoInChI(self):
+        # Tests interconversions between the SMILES on the left versus
+        # the InChI on the right.
+        # The canonical smiles (in the middle) were derived from the SMILES.
+        data = [
+('ClC=CF', 'FC=CCl',       'InChI=1S/C2H2ClF/c3-1-2-4/h1-2H'),
+('Cl/C=C/F', 'F/C=C/Cl',   'InChI=1S/C2H2ClF/c3-1-2-4/h1-2H/b2-1+'),
+('Cl/C=C\\F', 'F/C=C\\Cl', 'InChI=1S/C2H2ClF/c3-1-2-4/h1-2H/b2-1-'),
+('Cl[C@@](Br)(F)I', 'F[C@@](Cl)(Br)I', 'InChI=1S/CBrClFI/c2-1(3,4)5/t1-/m0/s1'),
+('Cl[C@](Br)(F)I', 'F[C@](Cl)(Br)I',   'InChI=1S/CBrClFI/c2-1(3,4)5/t1-/m1/s1'),
+('ClC(Br)(F)I', 'FC(Cl)(Br)I',         'InChI=1S/CBrClFI/c2-1(3,4)5')]
+        for smiles, can, inchi in data:
+            output, error = run_exec(smiles, "babel -ismi -oinchi")
+            self.assertEqual(output.rstrip(), inchi)
+            output, error = run_exec(inchi, "babel -iinchi -ocan")
+            self.assertEqual(output.rstrip(), can)
+            
+    def parseMDL(self, text):
+        lines = text.split("\n")
+        broken = lines[3].split()
+        Natoms = int(broken[0])
+        Nbonds = int(broken[1])
+        atoms = []
+        for i in range(Natoms):
+            broken = lines[i+4].split()
+            atoms.append({'parity':int(broken[6])})
+        bonds = []
+        for i in range(Nbonds):
+            broken = lines[i+4+Natoms].split()
+            bonds.append({'stereo':int(broken[3])})
+        return atoms, bonds
+        
+    def notestSMILESto3DMDL(self):
+        """Test interconversion between SMILES and 3D MDL"""
+        data = [
+('ClC=CF', 'FC=CCl', [0, 0, 0, 0], [0, 0, 3]),
+('Cl/C=C/F', 'F/C=C/Cl', [0, 0, 0, 0], [0, 0, 0]),
+('Cl/C=C\\F', 'F/C=C\\Cl', [0, 0, 0, 0], [0, 0, 0]), 
+('Cl[C@@](Br)(F)I', 'F[C@@](Cl)(Br)I', [0, 0, 0, 0, 1], [0, 0, 0, 1]),
+('Cl[C@](Br)(F)I', 'F[C@](Cl)(Br)I', [0, 0, 0, 0, 2], [0, 0, 0, 6]),
+('ClC(Br)(F)I', 'FC(Cl)(Br)I', [0, 0, 0, 0, 3], [0, 0, 0, 4])
+]
+        for smiles, can, atompar, bondstereo in data:
+            output, error = run_exec(smiles, "babel -ismi -osdf --gen3d")
+            atoms, bonds = self.parseMDL(output)
+            parities = [atom['parity'] for atom in atoms]
+            parities.sort()
+            stereos = [bond['stereo'] for bond in bonds]
+            stereos.sort()
+            self.assertEqual(atompar, parities)
+            self.assertEqual(bondstereo, stereos)
+            output, error = run_exec(output, "babel -isdf -ocan")
+            self.assertEqual(output.rstrip(), can)
+
+    def test2DMDLto0D(self):
+        """Test conversion for 2D MDL to CAN and InChI"""
+        # The following file was created using RDKit starting from
+        # the SMILES strings in data[x][0] below.
+        filename = self.getTestFile("testsym_2Dtests.sdf")
+        data = [
+('ClC=CF', 'FC=CCl',       'InChI=1S/C2H2ClF/c3-1-2-4/h1-2H'),
+('Cl/C=C/F', 'F/C=C/Cl',   'InChI=1S/C2H2ClF/c3-1-2-4/h1-2H/b2-1+'),
+('Cl/C=C\\F', 'F/C=C\\Cl', 'InChI=1S/C2H2ClF/c3-1-2-4/h1-2H/b2-1-'),
+('Cl[C@@](Br)(F)I', 'F[C@@](Cl)(Br)I', 'InChI=1S/CBrClFI/c2-1(3,4)5/t1-/m0/s1'),
+('Cl[C@](Br)(F)I', 'F[C@](Cl)(Br)I',   'InChI=1S/CBrClFI/c2-1(3,4)5/t1-/m1/s1'),
+('ClC(Br)(F)I', 'FC(Cl)(Br)I',         'InChI=1S/CBrClFI/c2-1(3,4)5')]
+        
+        output, error = run_exec("babel -isdf %s -ocan" % filename)
+        for i, smiles in enumerate(output.rstrip().split("\n")):
+            self.assertEqual(smiles.rstrip(), data[i][1])
+
+        output, error = run_exec("babel -isdf %s -oinchi" % filename)
+        for i, inchi in enumerate(output.rstrip().split("\n")):
+            self.assertEqual(inchi.rstrip(), data[i][2])
+
 class TestStereoConversion(BaseTest):
     """Random tests relating to roundtripping stereochemistry"""
     def setUp(self):
@@ -116,7 +197,7 @@ class TestStereoConversion(BaseTest):
         
 if __name__ == "__main__":
     testsuite = []
-    for myclass in [TestCisTransSym, TestTetSym, TestStereoConversion]:
+    for myclass in [TestConversions, TestCisTransSym, TestTetSym, TestStereoConversion]:
         suite = unittest.TestLoader().loadTestsFromTestCase(myclass)
         testsuite.append(suite)
     unittest.TextTestRunner().run(unittest.TestSuite(testsuite))
